src/test/ui/typeck/typeck-default-trait-impl-cross-crate-coherence.stderr
error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/typeck-default-trait-impl-cross-crate-coherence.rs:13:1
   |
LL | impl DefaultedTrait for (A,) { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ impl doesn't use types inside crate
   |
   = note: the impl does not reference only types defined in this crate
   = note: define and implement a trait or new type instead

error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/typeck-default-trait-impl-cross-crate-coherence.rs:16:1
   |
LL | impl !DefaultedTrait for (B,) { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ impl doesn't use types inside crate
   |
   = note: the impl does not reference only types defined in this crate
   = note: define and implement a trait or new type instead

error[E0321]: cross-crate traits with a default impl, like `lib::DefaultedTrait`, can only be implemented for a struct/enum type defined in the current crate
  --> $DIR/typeck-default-trait-impl-cross-crate-coherence.rs:20:1
   |
LL | impl DefaultedTrait for Box<C> { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't implement cross-crate trait for type in another crate

error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/typeck-default-trait-impl-cross-crate-coherence.rs:21:1
   |
LL | impl DefaultedTrait for lib::Something<C> { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ impl doesn't use types inside crate
   |
   = note: the impl does not reference only types defined in this crate
   = note: define and implement a trait or new type instead

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0117, E0321.
For more information about an error, try `rustc --explain E0117`.
